crates/org-edit/tests/snapshots/snapshots__narrowed_sort.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
* B‸
** z
** a
* A

----
‸* B
** a
** z

* A
