crates/org-edit/tests/snapshots/snapshots__outdent_item_tree.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
- a
  - b‸

----
- a
- b‸
