crates/org-edit/tests/snapshots/snapshots__paste_subtree.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
* A
** B
‸* C

----
* A
** B
‸* Pasted
** Its child
* C
