crates/org-edit/tests/snapshots/snapshots__priority_remove.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
* [#A] x‸

----
* x‸
