crates/org-edit/tests/snapshots/snapshots__repair_numbering.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
1. a‸
5. b
9. c

----
1. a‸
2. b
3. c
