crates/org-edit/tests/snapshots/snapshots__replace_timestamp.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
Meet <2026-09-01 Tue +1w>‸.

----
Meet <2026-09-28 Mon +1w‸>.
