crates/org-edit/tests/snapshots/snapshots__select_tag_exclusive.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{picked:?}\")"
---
["@work", "laptop"]
